{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 3077,
  "lineage": "756fba76-b42d-d060-9b9f-2149a3a0660d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:vpc/vpc-052954f6928599b78",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e50bdada068438b3",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-683c280a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-052954f6928599b78",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d3e5a5b396294992",
            "owner_id": "932862063257",
            "tags": {
              "Name": "deepholm-staging"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "eks_network_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:route-table/rtb-0d3e5a5b396294992",
            "default_route_table_id": "rtb-0d3e5a5b396294992",
            "id": "rtb-0d3e5a5b396294992",
            "owner_id": "932862063257",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "deepholm-staging-private"
            },
            "tags_all": {
              "Name": "deepholm-staging-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-052954f6928599b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks_network_nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01187e810c42deec7",
            "domain": "vpc",
            "id": "eipalloc-01187e810c42deec7",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-193-222-47.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.222.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deepholm-staging-nat-gateway_a"
            },
            "tags_all": {
              "Name": "deepholm-staging-nat-gateway_a"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": "sub-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e197e23c35508e88",
            "domain": "vpc",
            "id": "eipalloc-0e197e23c35508e88",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-9-33-166.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.33.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deepholm-staging-nat-gateway_a"
            },
            "tags_all": {
              "Name": "deepholm-staging-nat-gateway_a"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_network_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:internet-gateway/igw-0ee8d69589b6e8dbf",
            "id": "igw-0ee8d69589b6e8dbf",
            "owner_id": "932862063257",
            "tags": {
              "Name": "deepholm-staging"
            },
            "tags_all": {
              "Name": "deepholm-staging"
            },
            "vpc_id": "vpc-052954f6928599b78"
          },
          "dependencies": [
            "aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_network_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01187e810c42deec7",
            "connectivity_type": "public",
            "id": "nat-0e734d62c6e9e8e23",
            "network_interface_id": "eni-04f2904f2f924acba",
            "private_ip": "10.0.200.163",
            "public_ip": "54.193.222.47",
            "subnet_id": "subnet-0b5e61739c7c4a73f",
            "tags": {
              "Name": "deepholm-staging"
            },
            "tags_all": {
              "Name": "deepholm-staging"
            }
          },
          "dependencies": [
            "aws_eip.eks_network_nat_gateway_a",
            "aws_subnet.private",
            "aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "sub-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e197e23c35508e88",
            "connectivity_type": "public",
            "id": "nat-09f44d7eb28fd52ff",
            "network_interface_id": "eni-0d7ca3646cf0ed4ae",
            "private_ip": "10.0.201.168",
            "public_ip": "52.9.33.166",
            "subnet_id": "subnet-0d0d1b7b5aceff1e4",
            "tags": {
              "Name": "deepholm-staging"
            },
            "tags_all": {
              "Name": "deepholm-staging"
            }
          },
          "dependencies": [
            "aws_eip.eks_network_nat_gateway_a",
            "aws_subnet.private",
            "aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee8d69589b6e8dbf",
            "id": "r-rtb-00c56eb2a159318b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c56eb2a159318b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_network_gateway",
            "aws_route_table.eks_network_public",
            "aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3e5a5b3962949921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e734d62c6e9e8e23",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3e5a5b396294992",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.eks_network_private",
            "aws_eip.eks_network_nat_gateway_a",
            "aws_nat_gateway.eks_network_nat_gateway",
            "aws_subnet.private",
            "aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_network_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:route-table/rtb-00c56eb2a159318b2",
            "id": "rtb-00c56eb2a159318b2",
            "owner_id": "932862063257",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "deepholm-staging-public"
            },
            "tags_all": {
              "Name": "deepholm-staging-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-052954f6928599b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07709b0e1a6b4ed64",
            "route_table_id": "rtb-0d3e5a5b396294992",
            "subnet_id": "subnet-0b5e61739c7c4a73f"
          },
          "dependencies": [
            "aws_default_route_table.eks_network_private",
            "aws_subnet.private",
            "aws_vpc.eks_network"
          ]
        },
        {
          "index_key": "sub-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ded7ecc2e67ff3a5",
            "route_table_id": "rtb-0d3e5a5b396294992",
            "subnet_id": "subnet-0d0d1b7b5aceff1e4"
          },
          "dependencies": [
            "aws_default_route_table.eks_network_private",
            "aws_subnet.private",
            "aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f1bbeb2f7b8a33b",
            "route_table_id": "rtb-00c56eb2a159318b2",
            "subnet_id": "subnet-0f399d8dff2eb6017"
          },
          "dependencies": [
            "aws_route_table.eks_network_public",
            "aws_subnet.public",
            "aws_vpc.eks_network"
          ]
        },
        {
          "index_key": "sub-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f32864cc26a8ee50",
            "route_table_id": "rtb-00c56eb2a159318b2",
            "subnet_id": "subnet-04a875c16f1c1c957"
          },
          "dependencies": [
            "aws_route_table.eks_network_public",
            "aws_subnet.public",
            "aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:subnet/subnet-0b5e61739c7c4a73f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5e61739c7c4a73f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932862063257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-052954f6928599b78"
          },
          "dependencies": [
            "aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:subnet/subnet-0d0d1b7b5aceff1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0d1b7b5aceff1e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932862063257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-052954f6928599b78"
          },
          "dependencies": [
            "aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:subnet/subnet-0f399d8dff2eb6017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.198.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f399d8dff2eb6017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "932862063257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-052954f6928599b78"
          },
          "dependencies": [
            "aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:subnet/subnet-04a875c16f1c1c957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.199.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a875c16f1c1c957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "932862063257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "deepholm-staging",
              "kubernetes.io/cluster/deepholm-staging": "owned",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-052954f6928599b78"
          },
          "dependencies": [
            "aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932862063257:vpc/vpc-052954f6928599b78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0740d516f62f1cf24",
            "default_route_table_id": "rtb-0d3e5a5b396294992",
            "default_security_group_id": "sg-0580e5fa17bf95c15",
            "dhcp_options_id": "dopt-683c280a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-052954f6928599b78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3e5a5b396294992",
            "owner_id": "932862063257",
            "tags": {
              "Name": "deepholm-staging"
            },
            "tags_all": {
              "Name": "deepholm-staging"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}